2020/1/9  前台部分基本完成

--- a/forum-center/src/main/webapp/css/special.css
+++ b/forum-center/src/main/webapp/css/special.css
@@ -215,7 +215,7 @@ a{
 #content{
     margin-top: 20px;
     width: 98%;
-    height: 600px;
+    height: 676px;
     margin-left: 1%;
     background-color: #f6f6f6;
 }
@@ -223,9 +223,9 @@ a{
 .media{
     margin-left: 19px;
     margin-top: 12px;
-    width: 400px;
+    width: 814px;
     height: 100px;
-    float: left;
+    border-bottom: 1px red dotted;
 }
 
 .pagination-container{
